@@ -27,53 +27,6 @@ issue 12:
     possible fix: check chat system for some non-state related linking
     possible cause: back in the past, chat keys were input twice. In this time, things may have changed
 
-issue 13:
-    game CRASHES when hovering over an button in start menu with following exception:
-          File "C:/Users/baulu/PycharmProjects/core/__main__.py", line 100, in <module>
-            main()
-          File "C:/Users/baulu/PycharmProjects/core/__main__.py", line 89, in main
-            run()
-          File "C:/Users/baulu/PycharmProjects/core/__main__.py", line 83, in run
-            pyglet.app.run()
-          File "C:\Python\core\3.8.1\lib\site-packages\pyglet\app\__init__.py", line 144, in run
-            event_loop.run()
-          File "C:\Python\core\3.8.1\lib\site-packages\pyglet\app\base.py", line 175, in run
-            self._run()
-          File "C:\Python\core\3.8.1\lib\site-packages\pyglet\app\base.py", line 187, in _run
-            timeout = self.idle()
-          File "C:\Python\core\3.8.1\lib\site-packages\pyglet\app\base.py", line 314, in idle
-            window.dispatch_event('on_draw')
-          File "C:\Python\core\3.8.1\lib\site-packages\pyglet\window\__init__.py", line 1330, in dispatch_event
-            if EventDispatcher.dispatch_event(self, *args) != False:
-          File "C:\Python\core\3.8.1\lib\site-packages\pyglet\event.py", line 423, in dispatch_event
-            if getattr(self, event_type)(*args):
-          File "C:\Users\baulu\PycharmProjects\core\rendering\window.py", line 355, in on_draw
-            G.eventhandler.call("render:draw:2d")
-          File "C:\Users\baulu\PycharmProjects\core\event\EventHandler.py", line 35, in call
-            results += bus.call(eventname, *args, *kwargs)
-          File "C:\Users\baulu\PycharmProjects\core\event\EventBus.py", line 82, in call
-            traceback.print_stack()
-        Traceback (most recent call last):
-          File "C:\Users\baulu\PycharmProjects\core\event\EventBus.py", line 75, in call
-            result.append((function(*list(args)+list(self.extra_arguments[0])+list(eargs),
-          File "C:\Users\baulu\PycharmProjects\core\state\ui\UIPartButton.py", line 115, in on_draw_2d
-            draw_button((x, y), self.bboxsize, mode)
-          File "C:\Users\baulu\PycharmProjects\core\state\ui\UIPartButton.py", line 46, in draw_button
-            ii.blit(x * sourceimage.width + position[0], y * sourceimage.height + position[1])
-          File "C:\Python\core\3.8.1\lib\site-packages\pyglet\image\__init__.py", line 909, in blit
-            self.get_texture().blit(x, y, z, width, height)
-          File "C:\Python\core\3.8.1\lib\site-packages\pyglet\image\__init__.py", line 840, in get_texture
-            self._current_texture = self.create_texture(Texture, rectangle, force_rectangle)
-          File "C:\Python\core\3.8.1\lib\site-packages\pyglet\image\__init__.py", line 832, in create_texture
-            self.blit_to_texture(texture.target, texture.level,
-          File "C:\Python\core\3.8.1\lib\site-packages\pyglet\image\__init__.py", line 1000, in blit_to_texture
-            glTexSubImage2D(target, level,
-          File "C:\Python\core\3.8.1\lib\site-packages\pyglet\gl\lib.py", line 106, in errcheck
-            raise GLException(msg)
-        pyglet.gl.lib.GLException: b'invalid value'
-
-    called by: UIPartButton.on_draw_2d, arguments: [], event name: render:draw:2d
-
 issue 14:
     occurs since: unknown, found on 29th of January, 2020
 
@@ -144,14 +97,25 @@ issue 28:
     since: unknown, found after fixing issue 19
     fix: debug what is wrong
 
-[29 - 32]
+issue 33:
+    bug: mouse middle click on blocks gives always the block, not only if not existent in inventory
+    since: unknown
+    fix: see Player.add_to_free_place-method
 
+issue 34:
+    bug: jumping from downwards into an block, you get damage
+    since: block damage was introduced
+    fix: rewrite collision system
 
-todo: fix bug: crafting somehow ends sometimes in the double amount than usually
-    (for example, crafting of crafting table)
-todo: fix bug: chat & inventory can be opened at the same time
-todo: fix bug: mouse middle click gives always the item, not only if not in inventory
-todo: fix bug: when jumping in an block from downwards, you get damage
-todo: fix bug: when jumping into an non-full block, getting damage
-todo: fix bug: when NOT rebuilding and entering the world, in first esc-state, bgcolor is white (?)
-todo: fix bug: when looking at the corner of an block, the focus is on the block behind rather on the block viewed at
+issue 35:
+    bug: going inside an non-full block will give you damage
+    since: block damage was introduced
+    fix: check for solid block
+
+issue 36:
+    bug: at some corners of blocks, HitBox fails in some cases to select the right block
+    since: HitBox implementation
+
+issue 39:
+    bug: leaves are handled solid
+    fix: check where is decided if show block -> check if is_solid_face is used correctly
